--- a/StreamingMovie.Web/Views/Shared/_AdminLayout.cshtml
+++ b/StreamingMovie.Web/Views/Shared/_AdminLayout.cshtml
@@ -81,6 +81,11 @@
                             </a>
                         </li>
                         <li>
+                            <a href="/Admin/VideoUpload" class="flex items-center text-sm py-1 text-slate-600 dark:text-white hover:text-blue-500">
+                                <i class="mr-2 text-sm leading-normal text-blue-500 ni ni-button-play"></i> Upload Film
+                            </a>
+                        </li>
+                        <li>
                             <a asp-action="ActorList" asp-controller="ActorAdmin" class="flex items-center text-sm py-1 text-slate-600 dark:text-white hover:text-blue-500">
                                 <i class="mr-2 text-sm leading-normal text-blue-500 ni ni-circle-08"></i> Actors
                             </a>
