--- a/StreamingMovie.Web/Views/Home/Components/HeroSlider/Default.cshtml
+++ b/StreamingMovie.Web/Views/Home/Components/HeroSlider/Default.cshtml
@@ -10,7 +10,7 @@
                     <div class="hero__text">
                         <h2>@movie.Title</h2>
                         <p class="truncate">@movie.Description</p>
-                        <a asp-action="Details" asp-controller="Movie" 
+                        <a asp-action="Watching" asp-controller="Movie" 
                            asp-route-slug="@movie.Slug">
                            <span>Watch Now</span> <i class="fa fa-angle-right"></i>
                        </a>
