--- a/StreamingMovie.Web/Views/Movie/_CommentSection.cshtml
+++ b/StreamingMovie.Web/Views/Movie/_CommentSection.cshtml
@@ -76,7 +76,7 @@
                        </div>
                     <p>${comment.content}</p>
                 </div>
-                <button class="text-white small btn btn-link" style="margin-left: 80px;"  onclick="toggleComponent('commentForm-@comment.Id')">
+                <button class="text-white small btn btn-link" style="margin-left: 80px;">
                     <i class="bi bi-reply-fill"></i> Reply
                 </button>
 
